--- a/main/templates/main/base_not_logged.html
+++ b/main/templates/main/base_not_logged.html
@@ -8,6 +8,7 @@
 
         {% load static %}
         <link rel="stylesheet" href="{% static 'main/styles_login.css' %}">
+        <link rel="shortcut icon" href="{% static 'images/dolorfarma_favicon.png' %}">
     </head>
     <body>
         <header>
