--- a/main/templates/main/confirmacion.html
+++ b/main/templates/main/confirmacion.html
@@ -39,11 +39,14 @@
     
     .title-container h2 {
         margin: 0;
+        margin-top: 15px;
+        margin-bottom: 15px;
     }
     
     .title-container .qr-code {
         position: absolute;
         right: 10%;
+        margin-top: 20px;
         text-decoration: none;
     }
     
