--- a/main/templates/main/cuerpo.html
+++ b/main/templates/main/cuerpo.html
@@ -2,9 +2,15 @@
 
 {% block titulo-pestaña %}Muneco_articular{% endblock %}
 
-{% block titulo %}<h2>Indique la zona de su dolor</h2>{% endblock %}
-
 {% block contenido %}
+
+<div class = header2>
+    <div class="titulo">
+        <h2>Indique la zona de su dolor</h2>
+    </div>
+    
+</div>
+
 <div class="container">
     <div class="cuerpo">
         <img src="/static/images/cuerpo-humano.png" alt="Cuerpo humano" class="img_cuerpo">
