--- a/main/templates/main/login.html
+++ b/main/templates/main/login.html
@@ -1,6 +1,6 @@
 {% extends 'main/base_not_logged.html'%}
 
-{% block titulo-pestaña %}login{% endblock %}
+{% block titulo-pestaña %}Login{% endblock %}
 
 
 
