--- a/main/static/main/styles_login.css
+++ b/main/static/main/styles_login.css
@@ -189,7 +189,7 @@ input[type="submit"] {
     width: 100%;
     height: 50px;
     border: 1px solid;
-    background: green;
+    background: #449846;
     border-radius: 25px;
     font-size: 18px;
     color: white;
@@ -199,7 +199,7 @@ input[type="submit"] {
 }
 
 input[type="submit"]:hover {
-    border-color: green;
+    background: #56b558;
     transition: .5s;
 }
 
@@ -211,7 +211,7 @@ input[type="submit"]:hover {
 }
 
 .registrarse a {
-    color: green;
+    color: #449846;
     text-decoration: none;
 }
 
