--- a/main/templates/main/cuerpo.html
+++ b/main/templates/main/cuerpo.html
@@ -13,7 +13,9 @@
 
 <div class="container">
     <div class="cuerpo">
-        <img src="/static/images/cuerpo-humano.png" alt="Cuerpo humano" class="img_cuerpo">
+        <div class="image-container">
+            <img src="/static/images/cuerpo-humano.png" alt="Cuerpo humano" class="img_cuerpo">
+        </div>
         <form method="post">
             {% csrf_token %}
             
