--- a/staticfiles/main/styles_login.css
+++ b/staticfiles/main/styles_login.css
@@ -116,7 +116,7 @@ header .logout img {
 
 .formulario .img_logo {
     display: flex;
-    height: 50px;
+    height: 75px;
     text-align: center;
     padding: 10px 0 20px 0;
     border-bottom: 1px solid silver;
@@ -189,16 +189,17 @@ input[type="submit"] {
     width: 100%;
     height: 50px;
     border: 1px solid;
-    background: green;
+    background: #449846;
     border-radius: 25px;
     font-size: 18px;
     color: white;
     cursor: pointer;
     outline: none;
+    margin-bottom: 15px;
 }
 
 input[type="submit"]:hover {
-    border-color: green;
+    background: #56b558;
     transition: .5s;
 }
 
@@ -210,7 +211,7 @@ input[type="submit"]:hover {
 }
 
 .registrarse a {
-    color: green;
+    color: #449846;
     text-decoration: none;
 }
 
